# MajoLat

./: .gitignore  LICENSE.txt  README.md  entropy.py  examples.txt  hypothesis_test.py  latvis.py  locc_game.py  main.py  majorization.py  phd.code-workspace  preset.ps1  preset.sh  pyproject.toml  qentropy.py  quantum.py  renyi_criteria.py  test.py  tests.py
docs/: SLOCC_README.md
examples/: slocc_example.py
majolat/: __init__.py  majorization.py  quantum.py  utils.py
presentation/: alternative.tex  beamerouterthemeULB.sty  beamerthemeULB.sty  conclusion.tex  incomparability.tex  introduction.tex  main.tex  majorization.tex  preamble.sty  quantum.tex  volume.tex
proofs/: comp_down.tex  comp_up.tex  main.tex  monotone.tex  monotone_bis.tex  original_supermod_proof.tex
report/: BrufaceTitlepageStyle.sty  Majorization.bib  abstract.tex  acknowledgements.tex  acronyms.tex  alternative.tex  appendix.tex  autorisation.tex  backup.tex  chapter1.tex  chapter2.tex  conclusion.tex  declaration.tex  entropic_criteria.tex  incomparability.tex  information_theory.tex  intro.tex  introduction.tex  main.bbl-SAVE-ERROR  main.tex  majorization_theory.tex  preamble.sty  quantum_information.tex  references.bib  scratch.tex  volume.tex
simu/: locc_game_100000_4_10_1_0.01_2.csv  locc_game_1000_4_10_1_0.01_2.csv  locc_game_200000_4_10_1_0.01_2.csv  locc_game_200000_4_10_1_0.01_2_False.csv  locc_game_400000_4_10_1_0.01_2_False.csv  locc_game_4_10_1_0.01_2.csv  locc_game_500000_4_10_1_0.01_2.csv  renyi_comparison_2_2_10_0.1.csv  renyi_comparison_2_2_30_0.2.csv  (+11 more)
tables/: main.tex  (+1 more)
(+10 files in other folders)
