[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "majolat"
version = "0.1.0"
description = "Majorization and quantum information tools for entanglement transformations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.6.3",
    "qutip>=4.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["majolat*"]
