[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "majolat"
version = "0.1.0"
description = "Majorization and quantum information tools for entanglement transformations"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy>=1.21,<2.0",
    "matplotlib>=3.5",
    "qutip>=4.7.0,<5.0",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["majolat*"]
