[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "majolat"
version = "0.1.0"
description = "Majorization and quantum information tools for entanglement transformations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.5",
    "qutip>=5.0",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["majolat*"]
